Your current version of Antigravity is out of date. Please visit https://antigravity.google/download to download and install the latest version.